--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-react": "^7.33.2",
     "prettier": "^3.0.3",
+    "sass": "^1.68.0",
     "vite": "^3.2.0"
   }
 }
