--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "npm run build && surge dist tic_tac_toe_game_by_harshit.surge.sh/"
   },
   "dependencies": {
     "react": "^18.2.0",
