--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "deploy": "npm run build && surge dist tic_tac_toe_game_by_harshit.surge.sh/"
+    "deploy": "npm run build && surge dist tictactoegamebyharshit.surge.sh/"
   },
   "dependencies": {
     "react": "^18.2.0",
